# semantic-firewall

./: .gitignore  DASHBOARD_README.md  IMPLEMENTATION_SUMMARY.md  Makefile  README.md  docker-compose.yml
firewall/: Dockerfile  README.md  config.py  config.yaml  container.py  main.py  metrics_manager.py  pyproject.toml  requirements.txt  semantic_firewall.py
firewall/action_orchestrator/: __init__.py  orchestrator_service.py
firewall/action_orchestrator/adapters/: __init__.py  memory_idempotency_store.py  null_alerter.py  print_logger.py  structlog_logger.py
firewall/action_orchestrator/ports/: __init__.py  alerter_port.py  idempotency_store_port.py  logger_port.py
firewall/benchmark/: README.md  __init__.py  benchmark_runner.py  database.py  dataset_loader.py  init_db.py  metrics_calculator.py  minio_storage.py
firewall/core/: analyzer.py  backend_proxy.py  bootstrap.py  exceptions.py  orchestrator.py  request_context.py
firewall/core/api_models/: __init__.py  benchmarks.py  chat.py
firewall/core/benchmarks/: __init__.py  service.py
firewall/core/events/: __init__.py  standardized.py
firewall/core/gateway/: __init__.py  broadcaster.py  builders.py  chat_service.py  extractors.py  factory.py
firewall/core/metrics/: __init__.py  adapter.py  service.py
firewall/core/realtime/: __init__.py  connection_manager.py  events_queue.py
firewall/core/risk/: __init__.py  levels.py
firewall/core/utils/: decorators.py
firewall/fast_ml_filter/: __init__.py  detector_factory.py  ml_filter_service.py
firewall/fast_ml_filter/adapters/: __init__.py  custom_onnx_prompt_injection_detector.py  deberta_prompt_injection_detector.py  detoxify_toxicity_detector.py  llama_prompt_guard_detector.py  mock_pii_detector.py  onnx_pii_detector.py  onnx_toxicity_detector.py  presidio_pii_detector.py  regex_heuristic_detector.py
firewall/fast_ml_filter/ports/: __init__.py  heuristic_detector_port.py  pii_detector_port.py  prompt_injection_detector_port.py  toxicity_detector_port.py
firewall/models/: SF_model_v1.onnx
firewall/policy_engine/: __init__.py  policies.rego  policies.yaml  policy_service.py
firewall/policy_engine/adapters/: __init__.py  memory_tenant_context.py  opa_evaluator.py  rego_policy_loader.py  simple_policy_evaluator.py  yaml_policy_loader.py
firewall/policy_engine/ports/: __init__.py  policy_evaluator_port.py  policy_loader_port.py  tenant_context_port.py
firewall/preprocessor/: __init__.py  preprocessor_service.py
firewall/rules/: prompt_injection_rules.yaml
firewall/scripts/: convert_models_to_onnx.py  download_models.py
(+42 files in other folders)
